--- a/Map_Geofencing/PlantPhotosTableViewCell.xib
+++ b/Map_Geofencing/PlantPhotosTableViewCell.xib
@@ -12,32 +12,45 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFit" selectionStyle="default" indentationWidth="10" rowHeight="250" id="KGk-i7-Jjw" customClass="PlantPhotosTableViewCell" customModule="Map_Geofencing" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="250"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFit" selectionStyle="default" indentationWidth="10" rowHeight="300" id="KGk-i7-Jjw" customClass="PlantPhotosTableViewCell" customModule="Map_Geofencing" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="249.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="299.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3Yp-fB-DlG">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="250"/>
-                    </imageView>
-                    <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="n1M-5B-nOO">
-                        <rect key="frame" x="168" y="213" width="39" height="37"/>
-                    </pageControl>
+                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SiQ-E5-mKF">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
+                        <subviews>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="n1M-5B-nOO">
+                                <rect key="frame" x="168" y="205" width="39" height="37"/>
+                                <color key="pageIndicatorTintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="currentPageIndicatorTintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <action selector="pageChange:" destination="KGk-i7-Jjw" eventType="valueChanged" id="56E-49-Y5g"/>
+                                </connections>
+                            </pageControl>
+                        </subviews>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="300" id="4ut-6s-2h4"/>
+                            <constraint firstAttribute="trailing" secondItem="n1M-5B-nOO" secondAttribute="trailing" constant="168" id="JMQ-Mc-BUo"/>
+                            <constraint firstItem="n1M-5B-nOO" firstAttribute="centerX" secondItem="SiQ-E5-mKF" secondAttribute="centerX" id="bUX-wd-FiM"/>
+                            <constraint firstItem="n1M-5B-nOO" firstAttribute="top" secondItem="SiQ-E5-mKF" secondAttribute="top" constant="205" id="cUl-80-I4v"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="n1M-5B-nOO" secondAttribute="bottom" id="gE2-v2-5Dv"/>
+                            <constraint firstAttribute="width" constant="375" id="zeg-l9-AVQ"/>
+                        </constraints>
+                    </scrollView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="3Yp-fB-DlG" secondAttribute="bottom" id="2GN-85-UvA"/>
-                    <constraint firstItem="n1M-5B-nOO" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="7hC-oi-Cf0"/>
-                    <constraint firstAttribute="trailing" secondItem="3Yp-fB-DlG" secondAttribute="trailing" id="JIl-Rb-w1I"/>
-                    <constraint firstItem="3Yp-fB-DlG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Ty0-jL-NKl"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="n1M-5B-nOO" secondAttribute="bottom" constant="-8" id="cUY-5a-bkU"/>
-                    <constraint firstItem="3Yp-fB-DlG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="hhn-18-q8N"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="SiQ-E5-mKF" secondAttribute="bottom" constant="-8.5" id="40o-Nz-oSG"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="SiQ-E5-mKF" secondAttribute="trailing" constant="-8" id="JLR-3A-eof"/>
+                    <constraint firstItem="SiQ-E5-mKF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-8" id="pz1-Ym-Pzx"/>
+                    <constraint firstItem="SiQ-E5-mKF" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-8" id="vwx-Et-QiV"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="pageControl" destination="n1M-5B-nOO" id="wgL-ge-LXc"/>
-                <outlet property="plantImageView" destination="3Yp-fB-DlG" id="uc3-gL-hnn"/>
+                <outlet property="scrollView" destination="SiQ-E5-mKF" id="UH2-Gi-YBM"/>
             </connections>
             <point key="canvasLocation" x="34.5" y="93"/>
         </tableViewCell>
